ejemplo de pagina modificada xd

--- a/indexFES.html
+++ b/indexFES.html
@@ -4,5 +4,8 @@
 </head>
 <body>
     <h1>La zorra del RAFA</h1>
+    <p>esta es una prueba de cambios</p>
+    <br>
+    <h2>Cris es puto</h2>
 </body>
 </html>
